--- a/src/UI/Windows/Styles/ComponentStyles.xaml
+++ b/src/UI/Windows/Styles/ComponentStyles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
+                    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+                    xmlns:helpers="clr-namespace:OSDPBench.Windows.Helpers">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="DesignTokens.xaml"/>
@@ -105,10 +106,57 @@
         <Setter Property="Margin" Value="0,0,0,4"/>
     </Style>
     
-    <Style x:Key="TextBox.Standard" TargetType="TextBox">
+    <Style x:Key="TextBox.Standard" TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
         <Setter Property="MinHeight" Value="{StaticResource Control.Height.Medium}"/>
         <Setter Property="Margin" Value="{StaticResource Margin.Control}"/>
         <Setter Property="Padding" Value="{StaticResource Padding.Control}"/>
+        <Style.Triggers>
+            <Trigger Property="IsReadOnly" Value="True">
+                <Setter Property="Background" Value="#F5F5F5"/>
+                <Setter Property="ContextMenu" Value="{x:Null}"/>
+                <Setter Property="helpers:CopyTextBoxHelper.CopyCommand" Value="{x:Static helpers:CopyTextBoxHelper.DefaultCopyCommand}"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="TextBox">
+                            <Grid>
+                                <Border Background="#F5F5F5"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        CornerRadius="4"
+                                        Padding="{TemplateBinding Padding}">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <ScrollViewer Grid.Column="0"
+                                                      x:Name="PART_ContentHost"
+                                                      Focusable="False"
+                                                      HorizontalScrollBarVisibility="Hidden"
+                                                      VerticalScrollBarVisibility="Hidden"
+                                                      Margin="0,0,4,0"/>
+                                        <ui:Button Grid.Column="1"
+                                                   Appearance="Transparent"
+                                                   BorderThickness="0"
+                                                   Padding="4"
+                                                   Width="24"
+                                                   Height="24"
+                                                   VerticalAlignment="Center"
+                                                   ToolTip="Copy"
+                                                   Command="{Binding RelativeSource={RelativeSource AncestorType=TextBox}, Path=(helpers:CopyTextBoxHelper.CopyCommand)}"
+                                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=TextBox}}">
+                                            <ui:Button.Icon>
+                                                <ui:SymbolIcon Symbol="Copy24"/>
+                                            </ui:Button.Icon>
+                                        </ui:Button>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
     </Style>
     
     <Style x:Key="ComboBox.Standard" TargetType="ComboBox">
