--- a/src/UI/Windows/Views/Pages/ConnectPage.xaml
+++ b/src/UI/Windows/Views/Pages/ConnectPage.xaml
@@ -60,39 +60,32 @@
         </Border>
         <Border Style="{StaticResource Card.Bordered}">
             <StackPanel Style="{StaticResource Card.Content}">
-                <Grid Style="{StaticResource Style.ConnectionSection}">
+                <Grid SizeChanged="OnConnectionGridSizeChanged">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" MinWidth="100" />
+                        <ColumnDefinition Width="Auto" MinWidth="200"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <ui:TextBlock FontTypography="Subtitle"
-                                  Grid.Row="0"
-                                  Grid.Column="0"
+                    
+                    <!-- Title always in top-left -->
+                    <ui:TextBlock Grid.Row="0" Grid.Column="0"
+                                  FontTypography="Subtitle"
                                   Text="{markup:Localize Connect_ConnectToPD}"
                                   TextWrapping="Wrap"
-                                  Margin="0,0,0,10"/>
-                    <ui:TextBlock Style="{StaticResource Text.Caption}"
-                                  Grid.Row="1"
-                                  Grid.Column="0"
-                                  Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}"
-                                  TextWrapping="Wrap">
-                        <ui:TextBlock.Text>
-                            <MultiBinding StringFormat="{markup:Localize Connection_DeviceConnectedFormat}">
-                                <Binding Path="ViewModel.ConnectedAddress" />
-                                <Binding Path="ViewModel.ConnectedBaudRate" />
-                            </MultiBinding>
-                        </ui:TextBlock.Text>
-                    </ui:TextBlock>
-
-                    <StackPanel Grid.Row="0"
-                                Grid.RowSpan="2"
-                                Grid.Column="1"
+                                  VerticalAlignment="Center"
+                                  Margin="0,0,20,10"/>
+                    
+                    <!-- Buttons/Combo - will use Grid.Row and Grid.Column based on width -->
+                    <StackPanel x:Name="ButtonPanel"
+                                Grid.Row="0" Grid.Column="1"
                                 Orientation="Horizontal"
-                                HorizontalAlignment="Right">
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Right"
+                                Margin="0,0,0,10">
                         
                         <ui:Button Content="{markup:Localize Connect_Connect}"
                                    Command="{Binding ViewModel.ConnectDeviceCommand}"
@@ -119,9 +112,22 @@
                                    Visibility="{Binding DisconnectVisibility}"/>
 
                         <ComboBox Name="ConnectionTypeComboBox"
-                                  ItemsSource="{Binding ConnectionTypes }"
+                                  ItemsSource="{Binding ConnectionTypes}"
                                   SelectedIndex="{Binding SelectedConnectionTypeIndex, Mode=TwoWay}"/>
-                    </StackPanel>
+                        </StackPanel>
+                    
+                    <!-- Connected status -->
+                    <ui:TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                                  Style="{StaticResource Text.Caption}"
+                                  Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}"
+                                  TextWrapping="Wrap">
+                        <ui:TextBlock.Text>
+                            <MultiBinding StringFormat="{markup:Localize Connection_DeviceConnectedFormat}">
+                                <Binding Path="ViewModel.ConnectedAddress" />
+                                <Binding Path="ViewModel.ConnectedBaudRate" />
+                            </MultiBinding>
+                        </ui:TextBlock.Text>
+                    </ui:TextBlock>
                 </Grid>
                 
                 <!-- Discovery Warning (only shown when Discovery mode is selected) -->
