Proper display with dark theme

--- a/src/UI/Windows/App.xaml
+++ b/src/UI/Windows/App.xaml
@@ -13,6 +13,7 @@
                 <ui:ControlsDictionary />
                 <!-- OSDP Bench Design System -->
                 <ResourceDictionary Source="Styles/DesignTokens.xaml"/>
+                <ResourceDictionary Source="Styles/ThemeSemanticColors.xaml"/>
                 <ResourceDictionary Source="Styles/ComponentStyles.xaml"/>
                 <ResourceDictionary Source="Styles/LayoutTemplates.xaml"/>
             </ResourceDictionary.MergedDictionaries>
